Revert "Don't show "Loading.." on index page"
This reverts commit 332f93876d9e01cecd109c68eddbf27b901a22d1.

--- a/src/share/poudriere/html/index.html
+++ b/src/share/poudriere/html/index.html
@@ -114,7 +114,7 @@
     <!-- navbar -->
     <section id="section" class="p-5">
       <div id="main" class="container p-5">
-        <div id="loading_overlay" style="displey: none;">
+        <div id="loading_overlay">
           <div id="loading">
             <p>Loading...</p>
           </div>
